Sabha | Fixing alignment issues.

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,5 @@
 .App {
 }
+.lander {
+  text-align: center;
+}
